--- a/cyberthing/public/index.html
+++ b/cyberthing/public/index.html
@@ -15,8 +15,37 @@
         h1 {
             text-align: center;
         }
+        .userinput {
+            display: grid;
+            justify-content: center;
+            align-items: center;
+        }
+        .boxes {
+            /* Stack boxes vertically*/
+            display: flex;
+            flex-direction: column;
+            
+        }
     </style>
     <h1>Bot!</h1>
-    <script></script>
+    <div class="userinput">
+        <span class="boxes"><input id="message" type="text" placeholder="Enter message..."></span>
+        <span class="boxes"><input id="button" type="button" value="Click to send message..."></span>
+    </div>
+    <script>
+        document.getElementById("button").addEventListener("click", () => {
+            fetch("/botaction", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    message: document.getElementById("message").value
+                })
+            })
+        })
+        .then(res => res.text())
+        .then(data => console.log(data));
+    </script>
 </body>
 </html>
