--- a/gptbot/public/index.html
+++ b/gptbot/public/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-247e"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-text u-text-default u-text-1">Cyberthing + GPT4</p>
-        <p class="u-text u-text-default u-text-2">Logged in as...&nbsp;</p>
+        <p id="logged-in" class="hidden u-text u-text-default u-text-2">Logged in as...&nbsp;</p>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-b253">
       <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
@@ -31,7 +31,7 @@
                   <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 10px;">
                     <div class="u-form-group u-form-message">
                       <label for="message-3e7b" class="u-label">System</label>
-                      <textarea id="system_message" placeholder="You are a helpful assistant..." rows="4" cols="50" id="message-3e7b" name="system" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>
+                      <textarea id="system-message" placeholder="You are a helpful assistant..." rows="4" cols="50" id="message-3e7b" name="system" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>
                     </div>
                     <div class="u-form-send-message u-form-send-success">Thank you! Your message has been sent.</div>
                     <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
@@ -43,8 +43,8 @@
             </div>
             <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
               <div class="u-container-layout u-valign-top u-container-layout-2">
-                <ul class="u-text u-text-1">
-                  <li>Sample Item 1</li>
+                <ul id="conversation" class="scrollable u-text u-text-1">
+                  <!-- List items of conversations appear here. Add in reverse order (e.g. new messages append to top) -->
                 </ul>
                 <div class="u-form u-form-2">
                   <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom" name="form-1" style="padding: 10px;">
@@ -68,5 +68,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-fdee"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Cyberthing Dev Community</p>
       </div></footer>
-
+  <script src="main.js"></script>
 </body></html>
